--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <script>
         $.get("http://127.0.0.1:5000/", "", function (data) {
-            alert(data)
+            alert(data.message)
         })
     </script>
 </head>
