Serve the right JSON

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
 
     <script>
-        $.get("http://127.0.0.1:5000/", "", function (data) {
-            alert(data.message)
+        $.get("http://127.0.0.1:5000/availability", "", function (data) {
+            console.log(data)
         })
     </script>
 </head>
